--- a/RPG/src/css/loading.css
+++ b/RPG/src/css/loading.css
@@ -12,7 +12,12 @@
 }
 
 .loading-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   z-index: 2;
 }
 
@@ -21,7 +26,6 @@
   height: 120px;
   margin-bottom: 20px;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
   display: flex;
   align-items: center;
