--- a/RPG/src/components/barra-superior/menu/settingsMenu.css
+++ b/RPG/src/components/barra-superior/menu/settingsMenu.css
@@ -12,8 +12,15 @@
   height: 100%;
   background: white;
   box-shadow: -5px 0 25px rgba(0, 0, 0, 0.15);
-  animation: slideInRight 0.3s ease;
+  animation: slideInRight 0.3s forwards ease;
+  transform: translateX(100%);
   position: relative;
+}
+
+@keyframes slideInRight {
+  to {
+    transform: translateX(0);
+  }
 }
 
 .settings-menu-content {
