--- a/RPG/src/components/configurar-temporadas/Temporadas.css
+++ b/RPG/src/components/configurar-temporadas/Temporadas.css
@@ -124,7 +124,7 @@ html {
 }
 
 /* ===== MENSAGENS ===== */
-.mensagem {
+.mensagem-temporadas {
   padding: 14px 18px;
   border-radius: var(--border-radius-sm);
   margin-bottom: 25px;
