--- a/RPG/src/css/gerenciarUsers.css
+++ b/RPG/src/css/gerenciarUsers.css
@@ -140,7 +140,7 @@ text-align: center;
 box-shadow: 0 8px 20px rgba(102, 126, 234, 0.3);
 }
 
-.stat-number {
+.stat-number-gerenciar {
 font-size: 2.5rem;
 font-weight: bold;
 margin-bottom: 0.5rem;
