--- a/RPG/src/components/barra-superior/menu/settingsMenu.css
+++ b/RPG/src/components/barra-superior/menu/settingsMenu.css
@@ -4,11 +4,11 @@
   display: flex;
   justify-content: flex-end;
   background: rgba(0,0,0,0.3);
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .settings-menu {
-  z-index: 5000;
+  z-index: 9999;
   width: 320px;
   height: 100%;
   background: white;
@@ -92,6 +92,7 @@
   margin-bottom: 2rem;
   padding: 1rem;
   border-bottom: 2px solid #e9ecef;
+  height: 70px;
 }
 
 .settings-header h3 {
@@ -106,4 +107,36 @@
   flex-direction: column;
   gap: 1rem;
   flex: 1;
+}
+
+.infoBox-menuLat {
+  background-color: white;
+  border-left-color: #1449c0;
+  padding: 2%;
+}
+
+.infoBox-menuLat h4 {
+  margin: 0 0 5px 0;
+  font-size: 1.1rem;
+  color: #1449c0;
+}
+
+.infoBox-menuLat p {
+  margin: 0;
+  color: #666;
+}
+
+.infoBox-menuLat-div {
+  margin-top: 10px;
+  display: flex;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.copyright {
+  margin-top: auto;
+  text-align: center;
+  padding: 20px;
+  color: #ccc;
+  font-size: 0.8rem;
 }
